# scrapegoat

./: .gitignore  404.html  LICENSE  README.md  Scrapegoat Final Slide Deck.pptx  index.html  main.py  mkdocs.yaml  objects.inv  sitemap.xml
.github/workflows/: deploy-core.yml  deploy-loom.yml  deploy-vsix.yml  deploy.yml
core/: index.html
core/classes/block/: index.html
core/classes/commands/: index.html
core/classes/conditions/: index.html
core/classes/gardener/: index.html
core/classes/goat/: index.html
core/classes/interpreter/: index.html
core/classes/milkmaid/: index.html
core/classes/milkman/: index.html
core/classes/node/: index.html
core/classes/sheepdog/: index.html
core/classes/shepherd/: index.html
core/exceptions/: index.html
docs/: index.md  installation.md  why-scrapegoat.md
docs/core/: exceptions.md  index.md
docs/core/classes/: block.md  commands.md  conditions.md  gardener.md  goat.md  interpreter.md  milkmaid.md  milkman.md  node.md  sheepdog.md  shepherd.md
docs/loom/: index.md  loom.md
goatspeak-language-support/: package-lock.json  package.json
goatspeak-language-support/server/src/: server.ts
goatspeak-language-support/syntaxes/: goat.tmLanguage.json
installation/: index.html
loom/: index.html
loom/loom/: index.html
scrapegoat-core/: README.md  pyproject.toml
scrapegoat-core/src/scrapegoat_core/: __init__.py  cli.py  exceptions.py
scrapegoat-core/src/scrapegoat_core/classes/: __init__.py  block.py  command.py  conditions.py  gardener.py  goat.py  interpreter.py  milkmaid.py  milkman.py  node.py  sheepdog.py  shepherd.py
scrapegoat-loom/: README.md  pyproject.toml
scrapegoat-loom/src/scrapegoat_loom/: cli.py
scrapegoat-loom/src/scrapegoat_loom/classes/: loom.py
scrapegoat-loom/src/scrapegoat_loom/gui-styles/: tapestry.tcss
search/: search_index.json
tutorials/cli-tutorial/: index.html
tutorials/core-tutorial/: index.html
tutorials/goatspeak-tutorial/: index.html
tutorials/loom-tutorial/: index.html
