[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapegoat-core"
version = "1.2.0"
description = "A toolkit of functions, classes, and utilities for creating web scrapers."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
  { name = "Arman Chinai", email = "chinaiarman@gmail.com" },
  { name = "Lucas Angelozzi", email = "lucasangelozzi32@gmail.com"}
]
requires-python = ">=3.12"

dependencies = [
  "requests>=2.31.0"
]

keywords = ["scraping", "webscraping", "automation", "html", "parsing"]

[project.urls]
Homepage = "https://github.com/ChinaiArman/scrapegoat"
Documentation = "https://github.com/ChinaiArman/scrapegoat/blob/main/README.md"
Source = "https://github.com/ChinaiArman/scrapegoat"
Issues = "https://github.com/ChinaiArman/scrapegoat/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
loom = ["scrapegoat-loom>=1.2.0"]
js = [
  "playwright>=1.56.0",
]

[project.scripts]
scrapegoat = "scrapegoat_core.cli:main"
